implemented AnotherOffers layout

--- a/src/styles/variables/colorSheme.scss
+++ b/src/styles/variables/colorSheme.scss
@@ -1,5 +1,6 @@
 $color_default--dark: #000;
 $color_general--light: #fff;
+$color-general--middle: #ccc;
 $color_general--outline: #ffbf11;
 $color_case--dark--corn: #7b3300;
 $color_case--dark--buckwheat: #542511;
