--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,6 @@
 @import './reset-normalize.scss';
 @import './variables/index.scss';
 @import './mixins/index.scss';
+
+@import './typography/index.scss';
+@import './layout/index.scss';
