--- a/src/Components/AnotherOffers/AnotherOffers.scss
+++ b/src/Components/AnotherOffers/AnotherOffers.scss
@@ -5,6 +5,7 @@
 	--AnotherOffers--background: $color-general--middle;
 
 	padding-top: 57px;
+	padding-bottom: 40px;
 	background: var(--AnotherOffers--background);
 
 	&--corn {
