--- a/src/Components/Filters/Filters.scss
+++ b/src/Components/Filters/Filters.scss
@@ -3,6 +3,7 @@
 .Filters {
 	--Filters--color: $color_default--dark;
 
+	margin-bottom: 20px;
 	color: var(--Filters--color);
 	padding: 21px;
 	background: rgba(255, 255, 255, 0.22);
