--- a/src/Components/Filters/Filters.scss
+++ b/src/Components/Filters/Filters.scss
@@ -49,6 +49,10 @@
 		grid-template-columns: repeat(4, 1fr);
 		gap: 10px 20px;
 		margin-top: 15px;
+		
+		@media (max-width: $mediapoint_general--small-laptop) {
+			grid-template-columns: repeat(2, 1fr);
+		}
 	}
 
 	&__price-input {
