--- a/src/Components/MainScreen/MainScreen.scss
+++ b/src/Components/MainScreen/MainScreen.scss
@@ -9,6 +9,7 @@
 
 	@media (max-width: $mediapoint_general--big-laptop) {
 		height: auto;
+		padding-bottom: 60px;
 	}
 
 	&--corn {
@@ -40,6 +41,9 @@
 		color: #fff;
 		text-shadow: 0px 4px 4px rgba(13, 13, 13, 0.25);
 
+		@media (max-width: $mediapoint_general--big-laptop) {
+			margin-bottom: 40px;
+		}
 		@media (max-width: $mediapoint_general--small-laptop) {
 			margin: $layout_mobile--padding;
 			font-size: $layout_mobile--padding * 2;
