--- a/src/styles/typography/textChapterTitle.scss
+++ b/src/styles/typography/textChapterTitle.scss
@@ -3,7 +3,7 @@
 	font-weight: 600;
 	font-size: 42px;
 	line-height: 50px;
-	color: #000;
+	// color: #000;
 
 	@media (max-width: 768px) {
 		font-size: 26px;
