--- a/src/Components/Statistics/Statistics.scss
+++ b/src/Components/Statistics/Statistics.scss
@@ -1,8 +1,10 @@
 @import "../../styles/variables/index.scss";
 
 .Statistics {
+	background: linear-gradient(359.35deg, #FFEFCF 0.53%, #fffcf6 99.41%);;
+
 	&__title {
-		margin-top: 60px;
+		padding-top: 60px;
 		margin-bottom: 55px;
 	}
 
