fixed bug with barley color

--- a/src/Components/AnotherOffers/AnotherOffers.scss
+++ b/src/Components/AnotherOffers/AnotherOffers.scss
@@ -33,11 +33,7 @@
 
 	&--barley {
 		--AnotherOffers--color-main: $color_case--dark--barley;
-		--AnotherOffers--background: linear-gradient(
-			281.03deg,
-			rgba(255, 219, 91, 0.77) 10.48%,
-			rgba(255, 214, 0, 0.68) 72.13%
-		);
+		--AnotherOffers--background: linear-gradient(284.81deg, rgba(203, 67, 8, 0.29) 0%, rgba(131, 96, 44, 0.67) 66.84%);
 	}
 
 	&--wheat {
