--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -8,6 +8,12 @@
 	padding-bottom: 10px;
 	background-color: #FFEFCF;
 	color: #6b280d;
+
+	@media (max-width: $mediapoint_general--small-laptop) {
+		padding-top: 60px;
+		grid-template-columns: repeat(1, 1fr );
+	}
+
 	& a {
 		color: #910c07;
 		&:hover {
@@ -22,6 +28,10 @@
 	}
 	&__source-code {
 		font-size: 16px;
+
+		@media (max-width: $mediapoint_general--small-laptop) {
+			display: none;
+		}
 	}
 
 	&__center {
@@ -31,11 +41,17 @@
 		align-items: center;
 		height: 100px;
 		text-align: center;
+		@media (max-width: $mediapoint_general--small-laptop) {
+			height: auto;
+		}
 	}
 
 	&__main-text {
 		font-size: 18px;
 		line-height: 1.5;
+		@media (max-width: $mediapoint_general--small-laptop) {
+			font-size: 16px;
+		}
 	}
 	&__author {
 		font-weight: 600;
@@ -44,6 +60,9 @@
 	&__year-mark {
 		margin-top: 15px;
 		font-size: 16px;
+		@media (max-width: $mediapoint_general--small-laptop) {
+			font-size: 14px;
+		}
 	}
 
 	&__right {
