finished with API and bugs fixed

--- a/src/components/Goods/Goods.scss
+++ b/src/components/Goods/Goods.scss
@@ -3,6 +3,7 @@
 .Goods {
 	display: grid;
 	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: masonry;
 	gap: 35px 15px;
 	justify-content: space-between;
 	margin-bottom: 70px;
