--- a/src/components/Goods/Good.scss
+++ b/src/components/Goods/Good.scss
@@ -47,6 +47,8 @@
 	}
 
 	&__title {
+		$line-height: 21px;
+
 		font-style: normal;
 		font-weight: normal;
 		font-size: 18px;
@@ -54,6 +56,7 @@
 
 		color: #444444;
 
+		height: 2 * $line-height;
 		padding: 0 15px;
 		margin-top: 25px;
 	}
